<resources>
    <string name="google_place_api" translatable="false">AIzaSyCP2MlxpOH--w9tX-IEt0-v8pmlCw8qSoI</string>
    <string name="app_name">WACL</string>
    <string name="action_settings">Settings</string>
    <string name="button_cancel_text">Cancel</string>
    <string name="button_save_text">Save</string>
    <string name="repeat_text">Repeat</string>
    <string name="m_text">M</string>
    <string name="t_text">T</string>
    <string name="w_text">W</string>
    <string name="r_text">R</string>
    <string name="f_text">F</string>
    <string name="s_text">S</string>
    <string name="u_text">U</string>
    <string name="edit_text">Edit</string>
    <string name="delete_text">Delete</string>
    <string name="turnOff_text">Turn Off</string>
    <string name="postpone_text">Postpone</string>
    <string name="daysOrDate_text">Days or Date</string>
    <string name="notificationPreRing_text">Notification before ringing</string>
    <string name="minutes_text">minute/s</string>
    <string name="alarmWillSound_text">Alarm is ringing at</string>
    <string name="action_about_text">About</string>
    <string name="ringtone_text">Ringtone</string>
    <string name="addRingtone_text">Add Ringtone</string>
    <string name="permisionGranted_text">Permision Granted</string>
    <string name="permisionDenied_text">Permision Denied</string>
    <string name="defaultConfiguration_text">Default Configuration</string>
    <string name="setADefaultLocation_text">Set a default location</string>
    <string name="noSelectedPlace_text">No Selected place</string>
    <string name="setALocation_text">Set a location</string>
    <string name="useConditionalWeather_text">Use condional weather</string>
</resources>
